[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ammo/mine.png" type="Texture" id=1]
[ext_resource path="res://ammo/mine.gd" type="Script" id=3]
[ext_resource path="res://assets/fx/exploding_circle.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 160.922

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 15.8128 )

[sub_resource type="CircleShape2D" id=3]
radius = 23.0008

[node name="Mine" type="RigidBody2D"]
collision_layer = 16
collision_mask = 8
mass = 10.0
gravity_scale = 10.0
script = ExtResource( 3 )

[node name="Radius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radius"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Radius" to="." method="_on_Radius_body_entered"]
[connection signal="body_exited" from="Radius" to="." method="_on_Radius_body_exited"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
